# xes-tcc-uff

./: .gitignore  Dockerfile  Makefile  cloudbuild.yaml  docker-compose.yml  main.py  mypy.ini  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: tests.yml
src/api/: asgi.py  dependencies.py  errors.py  factory.py  middleware.py  typings.py
src/api/adapters/google/: __init__.py  cloud_storage.py  pubsub.py
src/api/adapters/memory/: __init__.py  memory_storage.py
src/api/adapters/sendgrid/: __init__.py  mail.py
src/api/domain/: util.py  xes.py
src/api/ports/: __init__.py  memory_storage.py  message_publisher.py  notification.py  storage.py
src/api/routers/: __init__.py  endpoints.py  schemas.py
